--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           dotnet-version: 8.x
       - run: dotnet restore
-      - run: dotnet publish -r ${{ matrix.architecture }} -c Release /p:AssemblyVersion=${{ github.ref }} /p:Version=${{ github.ref }}
+      - run: dotnet publish -r ${{ matrix.architecture }} -c Release /p:AssemblyVersion=${{ github.ref_name }} /p:Version=${{ github.ref_name }}
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
