--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -5,7 +5,7 @@ on:
       - '*'
 jobs:
   publish:
-    name: Publish for ${{ matrix.os }}
+    name: Publish for ${{ matrix.os }} for ${{ matrix.architecture }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -29,6 +29,6 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: Pyp/bin/Release/net8.0/${{ matrix.architecture }}/publish/${{ matrix.artifact_name }}
+          file: /Users/runner/work/Pyp/Pyp/Pyp/bin/Release/net8.0/${{ matrix.architecture }}/publish/${{ matrix.artifact_name }}
           asset_name: ${{ matrix.asset_name }}
           tag: ${{ github.ref }}
