--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -12,19 +12,24 @@ jobs:
         include:
           - os: macos-latest
             artifact_name: Pyp
-            architecture: osx-amd64
-            asset_name: pyp-macos-amd64
+            architecture: osx-x64
+            asset_name: pyp-intel
           - os: macos-latest
             artifact_name: Pyp
             architecture: osx-arm64
-            asset_name: pyp-macos-arm64
+            asset_name: pyp-apple-silicon
+          - os: windows-latest
+            artifact_name: Pyp.exe
+            architecture: win-x64
+            asset_name: pyp-windows64
+            
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 8.x
       - run: dotnet restore
-      - run: dotnet publish -r ${{ matrix.architecture }} -c Release /p:AssemblyVersion=${{ github.ref_name }} /p:Version=${{ github.ref_name }}
+      - run: dotnet publish -r ${{ matrix.architecture }} --no-restore -c Release /p:AssemblyVersion=${{ github.ref_name }} /p:Version=${{ github.ref_name }}
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
