More updates for actions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,14 +14,17 @@ jobs:
             architecture: osx-x64
             asset_name: pyp-intel
             file: /Users/runner/work/Pyp/Pyp/Pyp/bin/Release/net8.0/osx-x64/publish/Pyp
+            fileName: Pyp
           - os: macos-latest
             architecture: osx-arm64
             asset_name: pyp-apple-silicon
             file: /Users/runner/work/Pyp/Pyp/Pyp/bin/Release/net8.0/osx-arm64/publish/Pyp
+            fileName: Pyp
           - os: windows-latest
             architecture: win-x64
             asset_name: pyp-windows64.exe
             file: D:\a\Pyp\Pyp\Pyp\bin\Release\net8.0\win-x64\publish\Pyp.exe
+            fileName: Pyp.exe
             
     steps:
       - uses: actions/checkout@v4
@@ -30,10 +33,13 @@ jobs:
           dotnet-version: 8.x
       - run: dotnet restore -r ${{ matrix.architecture }}
       - run: dotnet publish -r ${{ matrix.architecture }} --no-restore -c Release /p:AssemblyVersion=${{ github.ref_name }} /p:Version=${{ github.ref_name }}
+      - run: mkdir release/
+      - run: mv ${{ matrix.file }} release/${{ matrix.fileName}}
+      - run: zip -r release.zip release
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ matrix.file }}
+          file: release.zip
           asset_name: ${{ matrix.asset_name }}
           tag: ${{ github.ref }}
