--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,13 +15,13 @@ jobs:
             asset_name: pyp-intel.zip
             file: /Users/runner/work/Pyp/Pyp/Pyp/bin/Release/net8.0/osx-x64/publish/Pyp
             fileName: Pyp
-            zipCommand: zip
+            zipCommand: zip -j
           - os: macos-latest
             architecture: osx-arm64
             asset_name: pyp-apple-silicon.zip
             file: /Users/runner/work/Pyp/Pyp/Pyp/bin/Release/net8.0/osx-arm64/publish/Pyp
             fileName: Pyp
-            zipCommand: zip
+            zipCommand: zip -j
           - os: windows-latest
             architecture: win-x64
             asset_name: pyp-windows64.zip
@@ -36,9 +36,9 @@ jobs:
           dotnet-version: 8.x
       - run: dotnet restore -r ${{ matrix.architecture }}
       - run: dotnet publish -r ${{ matrix.architecture }} --no-restore -c Release /p:AssemblyVersion=${{ github.ref_name }} /p:Version=${{ github.ref_name }}
-      - run: mkdir pyp/
-      - run: mv ${{ matrix.file }} pyp/${{ matrix.fileName}}
-      - run: ${{ matrix.zipCommand }} -r release.zip pyp
+      - run: mkdir release/
+      - run: mv ${{ matrix.file }} release/${{ matrix.fileName}}
+      - run: ${{ matrix.zipCommand }} -r release.zip release
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
